--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   </script>  
 </body>
 </html>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0LKZTYTRQ_KEY INPUT"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -197,7 +197,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-Z0LKZTYTRQ_KEY INPUT');
-</script>
+</script> -->
 <script>  
   function verifyPassword() {  
     var pw = document.getElementById("pswd").value;  
